<resources>
    <string name="app_name">Just Java</string>
    <string name="label_price">INVOICE</string>
    <string name="label_thanks">Thank You!</string>
    <string name="label_question">Add another drink?</string>
    <string name="label_coffee">Coffee, Flat White @ £3.50</string>
    <string name="label_latte">Caffe Latte @ £4.50</string>
    <string name="label_cappuccino">Cappuccino @ £5.50</string>
    <string name="label_total">TOTAL PRICE</string>
    <string name="label_toppings">Choose Toppings</string>
    <string name="label_coffee_qty">text_quantity_coffee</string>
    <string name="label_latte_qty">text_quantity_latte</string>
    <string name="label_cappuccino_qty">text_quantity_cappuccino</string>
    <string name="button_order">Place Order</string>
    <string name="option_yes">YES</string>
    <string name="option_no">NO</string>
    <string name="msg_alert">Please add an item first</string>
    <string name="action_increment">+</string>
    <string name="action_decrement">-</string>
    <string name="quantity_start">0</string>
</resources>
