<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            style="@style/LogoImageView"
            android:src="@drawable/justjava"
            android:contentDescription="@string/app_name"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                style="@style/TableRow">
                <TextView
                    android:id="@+id/text_coffee"
                    style="@style/RowDrink"
                    android:text="@string/label_coffee"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button_coffee_decrease"
                        style="@style/ButtonQuantity"
                        android:text="@string/action_decrement"
                        android:onClick="decrement" />

                    <TextView
                        android:id="@+id/text_quantity_coffee"
                        style="@style/TextQuantity"
                        android:text="@string/quantity_start"
                        android:layout_toRightOf="@id/button_coffee_decrease"/>

                    <Button
                        android:id="@+id/button_coffee_increase"
                        style="@style/ButtonQuantity"
                        android:text="@string/action_increment"
                        android:onClick="increment"
                        android:layout_toRightOf="@id/text_quantity_coffee"/>
                </RelativeLayout>
            </TableRow>

            <TableRow
                style="@style/TableRow">
                <TextView
                    android:id="@+id/text_latte"
                    style="@style/RowDrink"
                    android:text="@string/label_latte"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button_latte_decrease"
                        style="@style/ButtonQuantity"
                        android:text="@string/action_decrement"
                        android:onClick="decrement" />

                    <TextView
                        android:id="@+id/text_quantity_latte"
                        style="@style/TextQuantity"
                        android:text="@string/quantity_start"
                        android:layout_toRightOf="@id/button_latte_decrease"/>

                    <Button
                        android:id="@+id/button_latte_increase"
                        style="@style/ButtonQuantity"
                        android:text="@string/action_increment"
                        android:onClick="increment"
                        android:layout_toRightOf="@id/text_quantity_latte"/>
                </RelativeLayout>
            </TableRow>

            <TableRow
                style="@style/TableRow">
                <TextView
                    android:id="@+id/text_cappuccino"
                    style="@style/RowDrink"
                    android:text="@string/label_cappuccino"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button_cappuccino_decrease"
                        style="@style/ButtonQuantity"
                        android:text="@string/action_decrement"
                        android:onClick="decrement" />

                    <TextView
                        android:id="@+id/text_quantity_cappuccino"
                        style="@style/TextQuantity"
                        android:text="@string/quantity_start"
                        android:layout_toRightOf="@id/button_cappuccino_decrease"/>

                    <Button
                        android:id="@+id/button_cappuccino_increase"
                        style="@style/ButtonQuantity"
                        android:text="@string/action_increment"
                        android:onClick="increment"
                        android:layout_toRightOf="@id/text_quantity_cappuccino"/>
                </RelativeLayout>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/button_submit_order"
            android:text="@string/button_order"
            style="@style/ButtonControl"
            android:onClick="submitOrder" />

        <TextView
            android:id="@+id/text_alert"
            style="@style/MsgAlert"
            android:text="@string/msg_alert"/>

        <TextView
            android:id="@+id/text_title_invoice"
            style="@style/TextLabel"
            android:text="@string/label_price"/>

        <TableLayout
            android:id="@+id/table_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                style="@style/TableRow">
                <TextView
                    android:id="@+id/text_selected_drinks"
                    style="@style/PanelOutput"
                    android:layout_weight="3"/>
                <TextView
                    android:id="@+id/text_selected_drinks_price"
                    style="@style/PanelOutput"
                    android:layout_weight="1"/>

            </TableRow>
            <TableRow
                style="@style/TableRow">
                <TextView
                    android:id="@+id/text_title_total"
                    style="@style/PanelOutput"
                    android:layout_weight="3"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_total_price"
                    style="@style/PanelOutput"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/text_title_thanks"
            style="@style/TextLabel"
            android:text="@string/label_thanks"/>
    </LinearLayout>

</ScrollView>